cilium/mutual-auth/istio/policy-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "helloworld-v1-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v1
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/sleep-v1"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "helloworld-v2-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v2
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/sleep-v2"]
